kubernetes-example/loki/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-example
  labels:
    app: log-example
spec:
  replicas: 2
  selector:
    matchLabels:
      app: log-example
  template:
    metadata:
      labels:
        app: log-example
    spec:
      containers:
        - name: go-backend
          image: registry.cn-beijing.aliyuncs.com/wing_share_images/log-example:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "64m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /ping
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            failureThreshold: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /ping
              port: 8080
              scheme: HTTP
            failureThreshold: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: log-example
  labels:
    app: log-example
spec:
  type: ClusterIP
  selector:
    app: log-example
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-example
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: log-example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: log-example
                port:
                  number: 8080
